Wider min width to prevent weird wrapping behavior

--- a/src/containers/audio-rewards-page/AudioRewardsPage.module.css
+++ b/src/containers/audio-rewards-page/AudioRewardsPage.module.css
@@ -1,6 +1,6 @@
 .pageContainer {
   user-select: none;
-  min-width: 1020px;
+  min-width: 1080px;
 }
 
 .mobile {
